Fix: #552 - Alternative colors: layer in mobile layout with wrong color.

--- a/less/essential/alternative/alternative4.less
+++ b/less/essential/alternative/alternative4.less
@@ -670,7 +670,7 @@
 }
 
 @media (max-width: 979px) {
-  .essential-colours-alternative3 {
+  .essential-colours-alternative4 {
     .nav-collapse {
       background-color: ~"[[setting:alternativethemecolor4]]";
       .dropdown-menu > li > a,
